automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # \"ART VANDELAY\"\n"
+    "\"art vandelay\".upper # \"ART VANDELAY\""
    ]
   },
   {
