automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'"
+    "\"art vandelay\" # 'Art Vandelay'\n",
+    "\"art vandelay\""
    ]
   },
   {
