--- a/index.ipynb
+++ b/index.ipynb
@@ -180,14 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Art vandelay'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "\"art vandelay\""
+    "\"art vandelay\".capitalize()"
    ]
   },
   {
