--- a/index.ipynb
+++ b/index.ipynb
@@ -180,23 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Art vandelay'"
+       "'Art Vandelay'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "\"art vandelay\".capitalize()"
+    "\"art vandelay\".title()"
    ]
   },
   {
