--- a/index.ipynb
+++ b/index.ipynb
@@ -208,13 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CEO'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"Ceo\" # 'CEO'"
+    "\"Ceo\".upper() # 'CEO'"
    ]
   },
   {
