automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "\"art.vandelay@vandelay.co\".ends # False"
    ]
   },
   {
