--- a/index.ipynb
+++ b/index.ipynb
@@ -235,13 +235,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"art.vandelay@vandelay.co\".ends # False"
+    "\"art.vandelay@vandelay.co\".endswith('.com') # False"
    ]
   },
   {
