--- a/index.ipynb
+++ b/index.ipynb
@@ -298,20 +298,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-4f014bec82ee>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-4f014bec82ee>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    int\"7285553334\" # 7285553335\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "7285553335"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "int(\"7285553334\") # 7285553335\n"
+    "int(\"7285553334\")+1 # 7285553335\n"
    ]
   },
   {
@@ -322,7 +324,7 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 7285553336"
+    "int(\"7285553334\" # 7285553336"
    ]
   },
   {
