--- a/index.ipynb
+++ b/index.ipynb
@@ -318,13 +318,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285553336"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "int(\"7285553334\" # 7285553336"
+    "int(\"7285553334\")+2 # 7285553336"
    ]
   },
   {
